--- a/index.html
+++ b/index.html
@@ -1,20 +1,188 @@
 <!doctype html>
 <html>
-<head>
+<html lang="en">
+  <head>
 	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="initial-scale=1"/>
-	<link rel="stylesheet" media="screen" href="css/screen.css" >
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
 <body>
-
-<!-- BEGIN  out-->
-<div class="out">
-
+<div class="header">
+	<div class="l-center">
+		<a href="#" class="header__link">Преимущества</a>
+		<a href="#" class="header__link">Предложения</a>
+		<a href="#" class="header__link">Генплан</a>
+		<a href="#" class="header__logo">Зеландия</a>
+		<a href="#" class="header__link">Контакты</a>
+		<a href="#" class="header__link">Заказать звонок</a>
+		<div class="header__tel"><span>8 800 200 6000</span></div>
+	</div>
 </div>
-<!-- END out-->
-
+<div class="top-section js-top-section">
+	<div class="top-section__img">
+		<img src="img/main-bg.jpg" alt="img">
+	</div>
+	<div class="logo">
+		<i class="logo__icon"></i>
+		<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
+		<div>
+			<span>КОТТЕДЖНЫЙ ПОСЁЛОК</span>
+			<em>в Калининградской <br>области</em> 
+		</div>
+	</div>
+	<div class="top-section__title">
+		<span>Станьте собственником дома в центре Европы в России</span>
+	</div>
+	<div class="scroll-down">
+		<a href="#">
+			<span>Скрольте вниз</span>
+			<i></i>
+		</a>
+	</div>
+</div>
+<div class="l-center">
+	<div class="title">ПРЕИМУЩЕСТВА ПОСЁЛКА</div>
+	<div class="benefits-wrap">
+		<div class="benefit">
+			<div class="benefit__title">Все коммуникации центральные</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+		<div class="benefit">
+			<div class="benefit__title">Асфальтированные подъезды</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+		<div class="benefit">
+			<div class="benefit__title">Охраняемая территория</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+		<div class="benefit">
+			<div class="benefit__title">Респектабельные соседи</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+		<div class="benefit">
+			<div class="benefit__title">Прописка в Зеленоградске</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+		<div class="benefit">
+			<div class="benefit__title">Необходимая инфраструктура</div>
+			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+		</div>
+	</div>
+	<div class="to-center"><a href="#" class="link">ВСЕ ПРЕИМУЩЕСТВА</a></div>
+	<div class="projects-wrap">
+		<div class="title">МЫ ПРЕДЛАГАЕМ ТРИ ТИПА ПРОЕКТОВ</div>
+		<div class="project">
+			<div class="project__img">
+				<img src="img/project.png" alt="">
+			</div>
+			<div class="project__info">
+				<div class="project__title">ТАУНХАУСЫ</div>
+				<ul class="param-list">
+					<li>
+						<span>Площадь жилья:</span>80–160 м²
+					</li>
+					<li>
+						<span>Площадь участка:</span>2.5–2.9 соток
+					</li>
+					<li>
+						<span>Стоимость:</span>от 3.6 млн. Р
+					</li>
+				</ul>
+				<a href="#" class="link-action">ВЫБРАТЬ</a>
+			</div>
+		</div>
+		<div class="project">
+			<div class="project__img">
+				<img src="img/project.png" alt="">
+			</div>
+			<div class="project__info">
+				<div class="project__title">ЖИЛЫЕ ДОМА</div>
+				<ul class="param-list">
+					<li>
+						<span>Площадь жилья:</span>8120–240 м²
+					</li>
+					<li>
+						<span>Площадь участка:</span>8–10.4 соток
+					</li>
+					<li>
+						<span>Стоимость:</span>от 6.4 млн. ₷ 
+					</li>
+				</ul>
+				<a href="#" class="link-action">ВЫБРАТЬ</a>
+			</div>
+		</div>
+		<div class="project">
+			<div class="project__img">
+				<img src="img/project.png" alt="">
+			</div>
+			<div class="project__info">
+				<div class="project__title">ВИЛЛЫ</div>
+				<ul class="param-list">
+					<li>
+						<span>Площадь жилья:</span>180–360+ м²
+					</li>
+					<li>
+						<span>Площадь участка:</span>17.4–30 соток
+					</li>
+					<li>
+						<span>Стоимость:</span>от 29.5 млн. ₷ 
+					</li>
+				</ul>
+				<a href="#" class="link-action">ВЫБРАТЬ</a>
+			</div>
+		</div>
+	</div>
+	<div class="title">ГЕНЕРАЛЬНЫЙ ПЛАН ПОСЁЛКА</div>
+	<div class="plan">
+		<ul class="plan__badges">
+			<li>
+				<i class="color color_blue"></i>
+				<div>
+					<span>ВИЛЛЫ</span> от <span>30</span> млн. Р
+				</div>
+			</li>
+			<li>
+				<i class="color color_green"></i>
+				<div>
+					<span>ВДОМА</span> от <span>6</span> млн. Р
+				</div>
+			</li>
+			<li>
+				<i class="color color_orange"></i>
+				<div>
+					<span>ТАУНХАУСЫ</span> от <span>3.6</span> млн. Р
+				</div>
+			</li>
+		</ul>
+		<div class="plan__img">
+			<img src="img/plan.png" alt="">
+			<div class="window" style="top:100px;left:100px">
+				<div class="window__title">УЧАСТОК №2</div>
+				<ul class="param-list">
+					<li>
+						<span>Площадь:</span>2300 м²
+					</li>
+					<li>
+						<span>Стоимость:</span>34.5 млн. Р
+					</li>
+				</ul>
+				<p>К сожалению этот участок уже забронирован</p>
+				<a href="#" class="link-action is-liquid">УЗНАТЬ УСЛОВИЯ</a>
+				<button class="window__close"></button>
+			</div>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="footer__copy">© 2014 ЗЕЛАНДИЯ</div>
+		<p>
+			Россия, Калининградская обл. Зеленоградск, ул. Ленина, 20 <br>
+			Отдел продаж +7 900 000 000 <br>
+			<a href="mailto:info@zelandy.ru">info@zelandy.ru</a>
+		</p>
+	</div>
+</div>
 <script src="js/lib/head.js" data-headjs-load="js/init.js"></script>
 </body>
 </html>
