--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
 <body>
 <div class="header">
 	<div class="l-center">
+		<div class="header__nav">
+			<button></button>
+			<ul>
+				<li><a href="#">Преимущества</a></li>
+				<li><a href="#">Предложения</a></li>
+				<li><a href="#">Генплан</a></li>
+				<li><a href="#">Контакты</a></li>
+				<li><a href="#">Заказать звонок</a></li>
+			</ul>
+		</div>
 		<a href="#" class="header__link">Преимущества</a>
 		<a href="#" class="header__link">Предложения</a>
 		<a href="#" class="header__link">Генплан</a>
 		<a href="#" class="header__logo">Зеландия</a>
 		<a href="#" class="header__link">Контакты</a>
 		<a href="#" class="header__link">Заказать звонок</a>
-		<div class="header__tel"><span>8 800 200 6000</span></div>
+		<div class="header__tel">
+			<span>8 800 200 6000</span>
+			<button></button>
+		</div>
 	</div>
 </div>
 <div class="top-section js-top-section">
-	<div class="top-section__img">
+	<!-- <div class="top-section__img">
 		<img src="img/main-bg.jpg" alt="img">
-	</div>
+	</div> -->
 	<div class="logo">
 		<i class="logo__icon"></i>
 		<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
@@ -72,7 +85,7 @@
 	</div>
 	<div class="to-center"><a href="#" class="link">ВСЕ ПРЕИМУЩЕСТВА</a></div>
 	<div class="projects-wrap">
-		<div class="title">МЫ ПРЕДЛАГАЕМ ТРИ ТИПА ПРОЕКТОВ</div>
+		<div class="title">МЫ ПРЕДЛАГАЕМ <span>ТРИ ТИПА ПРОЕКТОВ</span></div>
 		<div class="project">
 			<div class="project__img">
 				<img src="img/project.png" alt="">
@@ -107,7 +120,7 @@
 						<span>Площадь участка:</span>8–10.4 соток
 					</li>
 					<li>
-						<span>Стоимость:</span>от 6.4 млн. ₷ 
+						<span>Стоимость:</span>от 6.4 млн. Р
 					</li>
 				</ul>
 				<a href="#" class="link-action">ВЫБРАТЬ</a>
@@ -127,7 +140,7 @@
 						<span>Площадь участка:</span>17.4–30 соток
 					</li>
 					<li>
-						<span>Стоимость:</span>от 29.5 млн. ₷ 
+						<span>Стоимость:</span>от 29.5 млн. Р 
 					</li>
 				</ul>
 				<a href="#" class="link-action">ВЫБРАТЬ</a>
@@ -137,23 +150,26 @@
 	<div class="title">ГЕНЕРАЛЬНЫЙ ПЛАН ПОСЁЛКА</div>
 	<div class="plan">
 		<ul class="plan__badges">
-			<li>
-				<i class="color color_blue"></i>
+			<li class="is-blue">
+				<i></i>
 				<div>
 					<span>ВИЛЛЫ</span> от <span>30</span> млн. Р
 				</div>
+				<a href="#"></a>
 			</li>
-			<li>
-				<i class="color color_green"></i>
+			<li class="is-green">
+				<i></i>
 				<div>
 					<span>ВДОМА</span> от <span>6</span> млн. Р
 				</div>
+				<a href="#"></a>
 			</li>
-			<li>
-				<i class="color color_orange"></i>
+			<li class="is-orange">
+				<i></i>
 				<div>
 					<span>ТАУНХАУСЫ</span> от <span>3.6</span> млн. Р
 				</div>
+				<a href="#"></a>
 			</li>
 		</ul>
 		<div class="plan__img">
