--- a/index.html
+++ b/index.html
@@ -9,194 +9,203 @@
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
 <body>
-<div class="header">
-	<div class="l-center">
-		<div class="header__nav">
-			<button></button>
+<div class="l-out">
+	<div class="header">
+		<div class="l-center">
+			<button class="header__nav-key js-show-nav"></button>
+			<a href="#" class="header__link">Преимущества</a>
+			<a href="#" class="header__link">Предложения</a> 
+			<a href="#" class="header__link">Генплан</a>
+			<a href="#" class="header__logo">Зеландия</a>
+			<a href="#" class="header__link">Контакты</a>
+			<a href="#" class="header__link">Заказать звонок</a>
+			<div class="header__tel">
+				<span>8 800 200 6000</span>
+				<button></button>
+			</div>
+		</div>
+		<div class="nav js-nav">
 			<ul>
 				<li><a href="#">Преимущества</a></li>
 				<li><a href="#">Предложения</a></li>
 				<li><a href="#">Генплан</a></li>
 				<li><a href="#">Контакты</a></li>
-				<li><a href="#">Заказать звонок</a></li>
+				<li>
+					<a href="#">
+						Заказать звонок
+						<span>8 800 200 6000</span>
+					</a>
+				</li>
 			</ul>
 		</div>
-		<a href="#" class="header__link">Преимущества</a>
-		<a href="#" class="header__link">Предложения</a>
-		<a href="#" class="header__link">Генплан</a>
-		<a href="#" class="header__logo">Зеландия</a>
-		<a href="#" class="header__link">Контакты</a>
-		<a href="#" class="header__link">Заказать звонок</a>
-		<div class="header__tel">
-			<span>8 800 200 6000</span>
-			<button></button>
-		</div>
 	</div>
-</div>
-<div class="top-section js-top-section">
-	<!-- <div class="top-section__img">
-		<img src="img/main-bg.jpg" alt="img">
-	</div> -->
-	<div class="logo">
-		<i class="logo__icon"></i>
-		<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
-		<div>
-			<span>КОТТЕДЖНЫЙ ПОСЁЛОК</span>
-			<em>в Калининградской <br>области</em> 
-		</div>
-	</div>
-	<div class="top-section__title">
-		<span>Станьте собственником дома в центре Европы в России</span>
-	</div>
-	<div class="scroll-down">
-		<a href="#">
-			<span>Скрольте вниз</span>
-			<i></i>
-		</a>
-	</div>
-</div>
-<div class="l-center">
-	<div class="title">ПРЕИМУЩЕСТВА ПОСЁЛКА</div>
-	<div class="benefits-wrap">
-		<div class="benefit">
-			<div class="benefit__title">Все коммуникации центральные</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-		<div class="benefit">
-			<div class="benefit__title">Асфальтированные подъезды</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-		<div class="benefit">
-			<div class="benefit__title">Охраняемая территория</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-		<div class="benefit">
-			<div class="benefit__title">Респектабельные соседи</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-		<div class="benefit">
-			<div class="benefit__title">Прописка в Зеленоградске</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-		<div class="benefit">
-			<div class="benefit__title">Необходимая инфраструктура</div>
-			<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
-		</div>
-	</div>
-	<div class="to-center"><a href="#" class="link">ВСЕ ПРЕИМУЩЕСТВА</a></div>
-	<div class="projects-wrap">
-		<div class="title">МЫ ПРЕДЛАГАЕМ <span>ТРИ ТИПА ПРОЕКТОВ</span></div>
-		<div class="project">
-			<div class="project__img">
-				<img src="img/project.png" alt="">
-			</div>
-			<div class="project__info">
-				<div class="project__title">ТАУНХАУСЫ</div>
-				<ul class="param-list">
-					<li>
-						<span>Площадь жилья:</span>80–160 м²
-					</li>
-					<li>
-						<span>Площадь участка:</span>2.5–2.9 соток
-					</li>
-					<li>
-						<span>Стоимость:</span>от 3.6 млн. Р
-					</li>
-				</ul>
-				<a href="#" class="link-action">ВЫБРАТЬ</a>
-			</div>
-		</div>
-		<div class="project">
-			<div class="project__img">
-				<img src="img/project.png" alt="">
-			</div>
-			<div class="project__info">
-				<div class="project__title">ЖИЛЫЕ ДОМА</div>
-				<ul class="param-list">
-					<li>
-						<span>Площадь жилья:</span>8120–240 м²
-					</li>
-					<li>
-						<span>Площадь участка:</span>8–10.4 соток
-					</li>
-					<li>
-						<span>Стоимость:</span>от 6.4 млн. Р
-					</li>
-				</ul>
-				<a href="#" class="link-action">ВЫБРАТЬ</a>
-			</div>
-		</div>
-		<div class="project">
-			<div class="project__img">
-				<img src="img/project.png" alt="">
-			</div>
-			<div class="project__info">
-				<div class="project__title">ВИЛЛЫ</div>
-				<ul class="param-list">
-					<li>
-						<span>Площадь жилья:</span>180–360+ м²
-					</li>
-					<li>
-						<span>Площадь участка:</span>17.4–30 соток
-					</li>
-					<li>
-						<span>Стоимость:</span>от 29.5 млн. Р 
-					</li>
-				</ul>
-				<a href="#" class="link-action">ВЫБРАТЬ</a>
-			</div>
-		</div>
-	</div>
-	<div class="title">ГЕНЕРАЛЬНЫЙ ПЛАН ПОСЁЛКА</div>
-	<div class="plan">
-		<ul class="plan__badges">
-			<li class="is-blue">
-				<i></i>
+	<div class="l-main">
+		<div class="top-section js-top-section">
+			<!-- <div class="top-section__img">
+				<img src="img/main-bg.jpg" alt="img">
+			</div> -->
+			<div class="logo">
+				<i class="logo__icon"></i>
+				<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
 				<div>
-					<span>ВИЛЛЫ</span> от <span>30</span> млн. Р
+					<span>КОТТЕДЖНЫЙ ПОСЁЛОК</span>
+					<em>в Калининградской <br>области</em> 
 				</div>
-				<a href="#"></a>
-			</li>
-			<li class="is-green">
-				<i></i>
-				<div>
-					<span>ВДОМА</span> от <span>6</span> млн. Р
-				</div>
-				<a href="#"></a>
-			</li>
-			<li class="is-orange">
-				<i></i>
-				<div>
-					<span>ТАУНХАУСЫ</span> от <span>3.6</span> млн. Р
-				</div>
-				<a href="#"></a>
-			</li>
-		</ul>
-		<div class="plan__img">
-			<img src="img/plan.png" alt="">
-			<div class="window" style="top:100px;left:100px">
-				<div class="window__title">УЧАСТОК №2</div>
-				<ul class="param-list">
-					<li>
-						<span>Площадь:</span>2300 м²
-					</li>
-					<li>
-						<span>Стоимость:</span>34.5 млн. Р
-					</li>
-				</ul>
-				<p>К сожалению этот участок уже забронирован</p>
-				<a href="#" class="link-action is-liquid">УЗНАТЬ УСЛОВИЯ</a>
-				<button class="window__close"></button>
+			</div>
+			<div class="top-section__title">
+				<span>Станьте собственником дома в центре Европы в России</span>
+			</div>
+			<div class="scroll-down">
+				<a href="#">
+					<span>Скрольте вниз</span>
+					<i></i>
+				</a>
 			</div>
 		</div>
-	</div>
-	<div class="footer">
-		<div class="footer__copy">© 2014 ЗЕЛАНДИЯ</div>
-		<p>
-			Россия, Калининградская обл. Зеленоградск, ул. Ленина, 20 <br>
-			Отдел продаж +7 900 000 000 <br>
-			<a href="mailto:info@zelandy.ru">info@zelandy.ru</a>
-		</p>
+		<div class="l-center">
+			<div class="title">ПРЕИМУЩЕСТВА ПОСЁЛКА</div>
+			<div class="benefits-wrap">
+				<div class="benefit">
+					<div class="benefit__title">Все коммуникации центральные</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+				<div class="benefit">
+					<div class="benefit__title">Асфальтированные подъезды</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+				<div class="benefit">
+					<div class="benefit__title">Охраняемая территория</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+				<div class="benefit">
+					<div class="benefit__title">Респектабельные соседи</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+				<div class="benefit">
+					<div class="benefit__title">Прописка в Зеленоградске</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+				<div class="benefit">
+					<div class="benefit__title">Необходимая инфраструктура</div>
+					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
+				</div>
+			</div>
+			<div class="to-center"><a href="#" class="link">ВСЕ ПРЕИМУЩЕСТВА</a></div>
+			<div class="projects-wrap">
+				<div class="title">МЫ ПРЕДЛАГАЕМ <span>ТРИ ТИПА ПРОЕКТОВ</span></div>
+				<div class="project">
+					<div class="project__img">
+						<img src="img/project.png" alt="">
+					</div>
+					<div class="project__info">
+						<div class="project__title">ТАУНХАУСЫ</div>
+						<ul class="param-list">
+							<li>
+								<span>Площадь жилья:</span>80–160 м²
+							</li>
+							<li>
+								<span>Площадь участка:</span>2.5–2.9 соток
+							</li>
+							<li>
+								<span>Стоимость:</span>от 3.6 млн. Р
+							</li>
+						</ul>
+						<a href="#" class="link-action">ВЫБРАТЬ</a>
+					</div>
+				</div>
+				<div class="project">
+					<div class="project__img">
+						<img src="img/project.png" alt="">
+					</div>
+					<div class="project__info">
+						<div class="project__title">ЖИЛЫЕ ДОМА</div>
+						<ul class="param-list">
+							<li>
+								<span>Площадь жилья:</span>8120–240 м²
+							</li>
+							<li>
+								<span>Площадь участка:</span>8–10.4 соток
+							</li>
+							<li>
+								<span>Стоимость:</span>от 6.4 млн. Р
+							</li>
+						</ul>
+						<a href="#" class="link-action">ВЫБРАТЬ</a>
+					</div>
+				</div>
+				<div class="project">
+					<div class="project__img">
+						<img src="img/project.png" alt="">
+					</div>
+					<div class="project__info">
+						<div class="project__title">ВИЛЛЫ</div>
+						<ul class="param-list">
+							<li>
+								<span>Площадь жилья:</span>180–360+ м²
+							</li>
+							<li>
+								<span>Площадь участка:</span>17.4–30 соток
+							</li>
+							<li>
+								<span>Стоимость:</span>от 29.5 млн. Р 
+							</li>
+						</ul>
+						<a href="#" class="link-action">ВЫБРАТЬ</a>
+					</div>
+				</div>
+			</div>
+			<div class="title">ГЕНЕРАЛЬНЫЙ ПЛАН ПОСЁЛКА</div>
+			<div class="plan">
+				<ul class="plan__badges">
+					<li class="is-blue">
+						<i></i>
+						<div>
+							<span>ВИЛЛЫ</span> от <span>30</span> млн. Р
+						</div>
+						<a href="#"></a>
+					</li>
+					<li class="is-green">
+						<i></i>
+						<div>
+							<span>ВДОМА</span> от <span>6</span> млн. Р
+						</div>
+						<a href="#"></a>
+					</li>
+					<li class="is-orange">
+						<i></i>
+						<div>
+							<span>ТАУНХАУСЫ</span> от <span>3.6</span> млн. Р
+						</div>
+						<a href="#"></a>
+					</li>
+				</ul>
+				<div class="plan__img">
+					<img src="img/plan.png" alt="">
+					<div class="window" style="top:100px;left:100px">
+						<div class="window__title">УЧАСТОК №2</div>
+						<ul class="param-list">
+							<li>
+								<span>Площадь:</span>2300 м²
+							</li>
+							<li>
+								<span>Стоимость:</span>34.5 млн. Р
+							</li>
+						</ul>
+						<p>К сожалению этот участок уже забронирован</p>
+						<a href="#" class="link-action is-liquid">УЗНАТЬ УСЛОВИЯ</a>
+						<button class="window__close"></button>
+					</div>
+				</div>
+			</div>
+			<div class="footer">
+				<div class="footer__copy">© 2014 ЗЕЛАНДИЯ</div>
+				<p>
+					Россия, Калининградская обл. Зеленоградск, ул. Ленина, 20 <br>
+					Отдел продаж +7 900 000 000 <br>
+					<a href="mailto:info@zelandy.ru">info@zelandy.ru</a>
+				</p>
+			</div>
+		</div>
 	</div>
 </div>
 <script src="js/lib/head.js" data-headjs-load="js/init.js"></script>
