--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <html lang="en">
   <head>
+  	<title>Index</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,9 +42,6 @@
 	</div>
 	<div class="l-main">
 		<div class="top-section js-top-section">
-			<!-- <div class="top-section__img">
-				<img src="img/main-bg.jpg" alt="img">
-			</div> -->
 			<div class="logo">
 				<i class="logo__icon"></i>
 				<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
@@ -56,15 +54,15 @@
 				<span>Станьте собственником дома в центре Европы в России</span>
 			</div>
 			<div class="scroll-down">
-				<a href="#">
+				<a href="#" class="js-scroll-to" data-section="js-section1">
 					<span>Скрольте вниз</span>
 					<i></i>
 				</a>
 			</div>
 		</div>
-		<div class="l-center">
-			<div class="title">ПРЕИМУЩЕСТВА ПОСЁЛКА</div>
+		<div class="l-center js-section1">
 			<div class="benefits-wrap">
+				<div class="title">ПРЕИМУЩЕСТВА ПОСЁЛКА</div>
 				<div class="benefit">
 					<div class="benefit__title">Все коммуникации центральные</div>
 					<div class="benefit__text">Мы несколько лет подряд занимались поиском лучших домов, подходящих под нашу местность и климат.</div>
