--- a/benefits.html
+++ b/benefits.html
@@ -22,7 +22,7 @@
 			<a href="#" class="header__link">Заказать звонок</a>
 			<div class="header__tel">
 				<span>8 800 200 6000</span>
-				<button></button>
+				<a href="tel:88002006000"></a>
 			</div>
 		</div>
 	</div>
@@ -53,10 +53,10 @@
 						<p>Трудно представить удобный поселок без продуманных дорог и парковок. В <a href="#">Зеландии</a> мы сделали всё, чтобы учесть различные сценарии использования дорог: от приезда скорой, пожарной, мусороуборочной машин до проведения дня рождения с большим количеством гостей и повседневного использования молодыми мамами, старшим поколением и инвалидами на колясках.</p>
 						<img src="img/plan.jpg" alt="img">
 						<p>Мы спроектировали максимально комфортные дороги для жизни и отдыха.</p>
-						<p>Ширина асфальтированной части — 6 метров. Это позволяет спокойно разъехаться двум большегрузным машинам, и парковаться прямо на дороге, не мешая при этом проезду других машин.
+						<p><em>Ширина асфальтированной части</em> — 6 метров. Это позволяет спокойно разъехаться двум большегрузным машинам, и парковаться прямо на дороге, не мешая при этом проезду других машин.
 						</p>
 						<h3>Специальные пешеходные зоны</h3>
-						<p>Ширина прогулочной пешеходной дороги — 1,5 метра. Такой ширины достаточно, чтобы могли разъехаться 2 мамы с колясками, едущими на встречу друг другу. В скверах ширина дорог еще больше — целых 2—2,5 метра, что позволяет гулять пешком, заниматься бегом, ездой на велосипеде и не мешать при этом друг другу.</p>
+						<p>Ширина прогулочной пешеходной дороги — 1,5 метра. Такой <strong>ширины достаточно</strong>, чтобы могли разъехаться 2 мамы с колясками, едущими на встречу друг другу. В скверах ширина дорог еще больше — целых 2—2,5 метра, что позволяет гулять пешком, заниматься бегом, ездой на велосипеде и не мешать при этом друг другу.</p>
 						<img src="img/img1.jpg" alt="">
 						<p>Все тротуары и дорожки рассчитаны под удобное передвижение по ним инвалидных и детских колясок. Поэтому тротуары находятся всегда на одном и том же уровне, что позволяет беспрепятственно перемещаться по прогулочным дорожкам внутри поселка. В местах где есть съезды на пешеходный переход, тротуар имеет плавное понижение уровня. Ширина прогулочной пешеходной дороги — 1,5 метра. Такой ширины достаточно, чтобы могли разъехаться 2 мамы с колясками, едущими на встречу друг другу. В скверах ширина дорог еще больше — целых 2—2,5 метра, что позволяет гулять пешком, заниматься бегом, ездой на велосипеде и не мешать при этом друг другу.</p>
 						<ol>
@@ -93,7 +93,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<div class="slider js-slick"
+						<div class="js-slick"
      						>
 						  	<div><img src="img/slide.jpg"></div>
 						  	<div><img src="img/slide.jpg"></div>
@@ -101,9 +101,59 @@
 						  	<div><img src="img/slide.jpg"></div>
 						  	<div><img src="img/slide.jpg"></div>
 						</div>
+						<div class="video">
+							<img src="img/slide.jpg">
+							<a href="#" class="video__play"></a>
+						</div>
+						<a href="#"><img src="img/banner.jpg" alt="img"></a>
+						<h2>Ливневая канализация</h2>
+						<p>Трудно представить удобный поселок без продуманных дорог и парковок. В Зеландии мы сделали всё, чтобы учесть различные сценарии использования дорог.</p>
+						<p>Все тротуары и дорожки рассчитаны под удобное передвижение по ним инвалидных и детских колясок. Поэтому тротуары находятся всегда на одном и том же уровне, что позволяет беспрепятственно перемещаться по прогулочным дорожкам внутри поселка. В местах где есть съезды на пешеходный переход, тротуар имеет плавное понижение уровня. Ширина прогулочной пешеходной дороги — 1,5 метра. Такой ширины достаточно, чтобы могли разъехаться 2 мамы с колясками, едущими на встречу друг другу. В скверах ширина дорог еще больше — целых 2—2,5 метра, что позволяет гулять пешком, заниматься бегом, ездой на велосипеде и не мешать при этом друг другу.
+						</p>
 					</article>
 				</div>
-				<div class="l-col-right"></div>
+				<div class="l-col-right">
+					<div class="article-item">
+						<a href="#" class="article-item__title">Электрические сети</a>
+						<a href="#" class="article-item__text">Мы сделали всё, чтобы сделать сети безопасными, не видными для глаз, экономичными, но надежными и функциональными</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Линии связи</a>
+						<a href="#" class="article-item__text">Интернет в нашем поселке максимально быстрый (оптоволокно), есть возможность подключения видеонаблюдения</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Электрические сети</a>
+						<a href="#" class="article-item__text">Мы сделали всё, чтобы сделать сети безопасными, не видными для глаз, экономичными, но надежными и функциональными</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Линии связи</a>
+						<a href="#" class="article-item__text">Интернет в нашем поселке максимально быстрый (оптоволокно), есть возможность подключения видеонаблюдения</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Электрические сети</a>
+						<a href="#" class="article-item__text">Мы сделали всё, чтобы сделать сети безопасными, не видными для глаз, экономичными, но надежными и функциональными</a>
+					</div>
+					<div class="article-item is-active">
+						<a href="#" class="article-item__title">Линии связи</a>
+						<a href="#" class="article-item__text">Интернет в нашем поселке максимально быстрый (оптоволокно), есть возможность подключения видеонаблюдения</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Электрические сети</a>
+						<a href="#" class="article-item__text">Мы сделали всё, чтобы сделать сети безопасными, не видными для глаз, экономичными, но надежными и функциональными</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Линии связи</a>
+						<a href="#" class="article-item__text">Интернет в нашем поселке максимально быстрый (оптоволокно), есть возможность подключения видеонаблюдения</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Электрические сети</a>
+						<a href="#" class="article-item__text">Мы сделали всё, чтобы сделать сети безопасными, не видными для глаз, экономичными, но надежными и функциональными</a>
+					</div>
+					<div class="article-item">
+						<a href="#" class="article-item__title">Линии связи</a>
+						<a href="#" class="article-item__text">Интернет в нашем поселке максимально быстрый (оптоволокно), есть возможность подключения видеонаблюдения</a>
+					</div>
+				</div>
 			</div>
 			<div class="footer">
 				<div class="footer__copy">© 2014 ЗЕЛАНДИЯ</div>
