--- a/benefits.html
+++ b/benefits.html
@@ -5,7 +5,7 @@
   	<title>Benefits</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="initial-scale=1, user-scalable=no">
 	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
