--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-<html lang="en">
   <head>
   	<title>Index</title>
 	<meta charset="utf-8">
@@ -41,7 +40,7 @@
 		</ul>
 	</div>
 	<div class="l-main">
-		<div class="top-section js-top-section">
+		<div class="top-section">
 			<div class="logo">
 				<i class="logo__icon"></i>
 				<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
