--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
   	<title>Index</title>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="initial-scale=1">
 	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
