--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</ul>
 	</div>
 	<div class="l-main">
-		<div class="top-section">
+		<div class="top-section js-top-section">
 			<div class="logo">
 				<i class="logo__icon"></i>
 				<h1 class="logo__title">ЗЕЛАНДИЯ</h1>
