--- a/benefits.html
+++ b/benefits.html
@@ -3,7 +3,7 @@
   <head>
   	<title>Benefits</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
