--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
   	<title>Index</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
 	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
@@ -20,7 +21,7 @@
 			<a href="#" class="header__link">Заказать звонок</a>
 			<div class="header__tel">
 				<span>8 800 200 6000</span>
-				<button></button>
+				<a href="tel:88002006000"></a>
 			</div>
 		</div>
 	</div>
