--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
   <head>
   	<title>Projects</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
 	<link href="css/screen.css" rel="stylesheet" media="screen">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
@@ -20,7 +21,7 @@
 			<a href="#" class="header__link">Заказать звонок</a>
 			<div class="header__tel">
 				<span>8 800 200 6000</span>
-				<button></button>
+				<a href="tel:88002006000"></a>
 			</div>
 		</div>
 	</div>
@@ -39,7 +40,7 @@
 		</ul>
 	</div>
 	<div class="l-main">
-		<div class="top-section top-section_slider">
+		<div class="top-section top-section_slider  js-top-section">
 			<div class="slider">
 				<div class="js-slick">
 				  	<div>
