--- a/benefits.html
+++ b/benefits.html
@@ -20,7 +20,7 @@
 			<a href="#" class="header__link is-active">Преимущества</a>
 			<a href="#" class="header__link">Предложения</a> 
 			<a href="#" class="header__link">Генплан</a>
-			<a href="#" class="header__logo">Зеландия</a>
+			<a href="#" class="header__logo ready">Зеландия</a>
 			<a href="#" class="header__link">Контакты</a>
 			<a href="#" class="header__link">Заказать звонок</a>
 			<div class="header__tel">
