--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 			<a href="#" class="header__link">Преимущества</a>
 			<a href="#" class="header__link">Предложения</a> 
 			<a href="#" class="header__link">Генплан</a>
-			<a href="#" class="header__logo">Зеландия</a>
+			<a href="#" class="header__logo animated">Зеландия</a>
 			<a href="#" class="header__link">Контакты</a>
 			<a href="#" class="header__link">Заказать звонок</a>
 			<div class="header__tel">
@@ -106,7 +106,7 @@
 					<ul class="param-list">
 						<li>
 							<span>Площадь жилья:</span> 
-							<span>80–160 м²</span>
+							<span class="lnum">80–160 м²</span>
 						</li>
 						<li>
 							<span>Площадь участка:</span> 
