--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,8 @@
 				<div class="js-slick-main">
 				  	<div>
 				  		<div class="slider__title">ПРОЕКТ ТАУНХАУСА №23</div>
+				  		<div class="lnum">1234567890</div>
+				  		<div class="lnum1">1234567890</div>
 				  		<ul class="slider__param">
 				  			<li>
 				  				<div>
@@ -430,11 +432,13 @@
 					  	<div><img src="img/slide-plan.png" width="225"></div>
 					</div>
 				</div>
+
 				<div class="result__col">
 					<div class="result__title">ПРОЕКТ ТАУНХАУСА</div>
+
 					<ul class="param-list">
 						<li>
-							<span>Общая площадь:</span><em>120 <sup>м²</sup></em>
+							<span>Общая площадь:</span><em>120 <sup>м²</sup> </em>
 						</li>
 						<li>
 							<span>Жилая площадь:</span><em>80 <sup>м²</sup></em>
